# OXI-Protocol-core

./: .dockerignore  Cargo.toml  Dockerfile
config/: config.json  d.json
src/: main.rs
static/css/: main.css
static/js/: script.js
templates/: add.json  friends.html  index.html  load.html  t.py  upgrades.html
